\name{transcriptogramer-News}
\title{transcriptogramer News}
\encoding{UTF-8}

\section{Version 1.3.1}{
  \itemize{
    \item Argument boundaryConditions added to the differentiallyExpressed() method.
    \item Slot Protein2Symbol added to the Transcriptogram class.
  }
}

\section{Version 1.1.18}{
  \itemize{
    \item The differentiallyExpressed() method plot now uses the ggplot2 package and shows the number of clusters detected.
  }
}

\section{Version 1.1.7}{
  \itemize{
    \item Argument trend added to the differentiallyExpressed() method to support limma-trend.
  }
}

\section{Version 1.1.6}{
  \itemize{
    \item GPL570 dataset updated.
  }
}

\section{Version 1.1.3}{
  \itemize{
    \item All species (Homo sapiens, Mus musculus, Saccharomyces cerevisiae and Rattus norvegicus) datasets were updated to obtain a better clustering.
  }
}

\section{Version 1.0.0}{
  \itemize{
    \item Released at Bioconductor [2017-10-31].
  }
}