@@ -5,13 +5,19 @@
 \section{Version 1.3.1}{
   \itemize{
     \item Argument boundaryConditions added to the differentiallyExpressed() method.
-    \item Slot Protein2Symbol added to the Transcriptogram class.
+    \item Slots Protein2Symbol, clusters, and pbc added to the Transcriptogram class.
   }
 }
 
 \section{Version 1.1.18}{
   \itemize{
     \item The differentiallyExpressed() method plot now uses the ggplot2 package and shows the number of clusters detected.
+  }
+}
+
+\section{Version 1.1.11}{
+  \itemize{
+    \item Argument title added to the differentiallyExpressed() method.
   }
 }
 
@@ -29,7 +35,7 @@
 
 \section{Version 1.1.3}{
   \itemize{
-    \item All species (Homo sapiens, Mus musculus, Saccharomyces cerevisiae and Rattus norvegicus) datasets were updated to obtain a better clustering.
+    \item All species datasets (Homo sapiens, Mus musculus, Saccharomyces cerevisiae and Rattus norvegicus) were updated to obtain a better clustering.
   }
 }
 
